--- a/affinity/editor-blocks.css
+++ b/affinity/editor-blocks.css
@@ -763,6 +763,14 @@
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
+/* General Widget styles */
+
+.edit-post-visual-editor [data-align="center"] .wp-block-categories__list,
+.edit-post-visual-editor [data-align="center"] .wp-block-archives,
+.edit-post-visual-editor [data-align="center"] .wp-block-lastest-posts {
+	list-style-position: inside;
+}
+
 /* Latest Comments */
 
 .editor-block-list__block .wp-block-latest-comments__comment-meta a {
